--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,15 @@ body,html{
     background: #1e1e1e;
     color: #fff;
     font-family: 'Roboto', sans-serif;
+    width: 100vw;
+    height: 100vh;
+}
+.content{
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
 }
 header{
     position: fixed;
