--- a/css/index.css
+++ b/css/index.css
@@ -238,8 +238,7 @@ h1:before{
     height: 100%;
     left: 0;
     top:0;
-    backdrop-filter: brightness(40%);
-    -webkit-backdrop-filter: brightness(10px);
+    background:rgba(0,0,0,.4);
     z-index: -1;
 }
 .video-container {
@@ -289,7 +288,7 @@ h1:before{
     height: 100%;
     left: 0;
     top:0;
-    backdrop-filter: brightness(40%);
+    background:rgba(0,0,0,.4);
     z-index: -1;
 }
 .music_frame{
