--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,7 @@ header a:hover:after{
 
 header.onScroll {
     background:rgba(0,0,0,0.8);
+    box-shadow: 0px 1px 5px 1px rgb(48, 48, 48);
 }
 .os-theme-dark>.os-scrollbar>.os-scrollbar-track>.os-scrollbar-handle{
     background: rgba(130,130,130,.7);
@@ -157,7 +158,7 @@ h1:before{
     left: 0;
     width: 100%;
     text-shadow: 1px 1px rgb(161 121 47 / 80%), 2px 2px rgb(180 142 67 / 80%);
-    opacity: .2;
+    opacity: .4;
 }
 .news_area{
     width: 90%;
@@ -238,7 +239,7 @@ h1:before{
     height: 100%;
     left: 0;
     top:0;
-    background:rgba(0,0,0,.5);
+    backdrop-filter: brightness(40%);
     z-index: -1;
 }
 .video-container {
@@ -288,7 +289,7 @@ h1:before{
     height: 100%;
     left: 0;
     top:0;
-    background:rgba(0,0,0,.5);
+    backdrop-filter: brightness(40%);
     z-index: -1;
 }
 .music_frame{
