--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ header a:hover:after{
 
 header.onScroll {
     background:rgba(0,0,0,0.8);
-    box-shadow: 0px 1px 5px 1px rgb(48, 48, 48);
+    box-shadow: 0px 1px 4px 1px rgba(48, 48, 48,.7);
 }
 .os-theme-dark>.os-scrollbar>.os-scrollbar-track>.os-scrollbar-handle{
     background: rgba(130,130,130,.7);
@@ -184,10 +184,10 @@ h1:before{
 }
 .news_area dd{
     width: 96%;
-    line-height: 2em;
-    letter-spacing: .15em;
+    line-height: 1.6em;
+    letter-spacing: .1em;
     font-family: 'Slabo 27px', serif;
-    font-size: 16px;
+    font-size: 18px;
     color: #eee;
     margin: 0 auto;
     text-align: center;
@@ -210,10 +210,10 @@ h1:before{
 }
 .s3 dd{
     color: #4d4d4d;
-    line-height: 2em;
-    letter-spacing: .15em;
+    line-height: 1.6em;
+    letter-spacing: .1em;
     font-family: 'Slabo 27px', serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 .s3 p:not(:last-of-type){
     margin-bottom:20px;
@@ -296,6 +296,12 @@ h1:before{
     width: 90%;
     max-width: 500px;
     margin: 20px auto 0;
+}
+.music_frame iframe{
+    height: 650px;
+}
+.music_frame.spotify iframe{
+    height: 430px;
 }
 footer{
     padding: 40px 0;
@@ -724,6 +730,9 @@ footer{
     }
 }
 @media only screen and (max-width: 600px) {
+    .music_frame iframe{
+        height: 400px;
+    }
     .news_area,.s3 dl,.videos_area,.music_frame{
         width: 95%;
     }
