--- a/css/index.css
+++ b/css/index.css
@@ -239,7 +239,7 @@ h1:before{
     height: 100%;
     left: 0;
     top:0;
-    backdrop-filter: brightness(40%);
+    background: rgba(0,0,0,.6);
     z-index: -1;
 }
 .video-container {
@@ -289,7 +289,7 @@ h1:before{
     height: 100%;
     left: 0;
     top:0;
-    backdrop-filter: brightness(40%);
+    background: rgba(0,0,0,.6);
     z-index: -1;
 }
 .music_frame{
